--- a/dad-jokes-project/public/index.html
+++ b/dad-jokes-project/public/index.html
@@ -31,6 +31,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
